// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditStageView snapshot test should render properly 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 27 26"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.142 13a13.36 13.36 0 01-.83 4.6.371.371 0 01-.619.13l-3.875-3.94a.546.546 0 01-.083-.628c.42-.827.63-1.773.63-2.762.055-3.222-2.526-5.878-5.71-5.878-1.011 0-1.938.26-2.743.706a.503.503 0 01-.605-.08l-3.45-3.504c-.243-.247-.169-.668.15-.794A12.11 12.11 0 0113.513 0c6.973 0 12.629 5.822 12.629 13zM6.204 2.42a.553.553 0 01.725.072l3.92 4.035c.173.178.188.46.053.67a5.951 5.951 0 00-.958 3.26c0 3.278 2.581 5.934 5.766 5.934a5.548 5.548 0 003.166-.985.505.505 0 01.65.054l4.244 4.368a.595.595 0 01.063.756C21.503 23.86 17.787 26 13.513 26 6.54 26 .885 20.178.885 13c0-4.403 2.082-8.231 5.319-10.58zm9.506 11.71c2.141 0 3.843-1.752 3.843-3.956 0-2.204-1.702-3.957-3.843-3.957-2.142 0-3.844 1.753-3.844 3.957 0 2.204 1.702 3.956 3.844 3.956z"
                    fill="url(#ci-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__paint0_linear"
                      x1="-7.274"
                      x2="9.718"
                      y1="8.398"
                      y2="33.949"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              pipelineSteps.build.create.aboutYourStage
            </p>
            <div
              class="StyledProps--font StyledProps--main main"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          id1
                        </span>
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="ciEditStage_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                        type="text"
                        value="name1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 0px;"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                </label>
                <div
                  class="bp3-form-group"
                  data-id="description-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <textarea
                      autocomplete="off"
                      class="bp3-input bp3-fill"
                      maxlength="1024"
                      name="description"
                      placeholder="common.descriptionPlaceholder"
                    >
                      desc1
                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <label
              class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main StyledProps--margin-bottom-small"
            >
              <input
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              cloneCodebaseLabel
            </label>
            <div
              class="cloneCodebaseInfo"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                data-icon="info"
              >
                <svg
                  height="10"
                  viewBox="0 0 12 12"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall"
              >
                pipelineSteps.build.create.cloneCodebaseHelperText
              </p>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                pipelineSteps.build.create.setupStage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditStageView snapshot test should render properly without data 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="ci-main"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 27 26"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M26.142 13a13.36 13.36 0 01-.83 4.6.371.371 0 01-.619.13l-3.875-3.94a.546.546 0 01-.083-.628c.42-.827.63-1.773.63-2.762.055-3.222-2.526-5.878-5.71-5.878-1.011 0-1.938.26-2.743.706a.503.503 0 01-.605-.08l-3.45-3.504c-.243-.247-.169-.668.15-.794A12.11 12.11 0 0113.513 0c6.973 0 12.629 5.822 12.629 13zM6.204 2.42a.553.553 0 01.725.072l3.92 4.035c.173.178.188.46.053.67a5.951 5.951 0 00-.958 3.26c0 3.278 2.581 5.934 5.766 5.934a5.548 5.548 0 003.166-.985.505.505 0 01.65.054l4.244 4.368a.595.595 0 01.063.756C21.503 23.86 17.787 26 13.513 26 6.54 26 .885 20.178.885 13c0-4.403 2.082-8.231 5.319-10.58zm9.506 11.71c2.141 0 3.843-1.752 3.843-3.956 0-2.204-1.702-3.957-3.843-3.957-2.142 0-3.844 1.753-3.844 3.957 0 2.204 1.702 3.956 3.844 3.956z"
                    fill="url(#ci-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__paint0_linear"
                      x1="-7.274"
                      x2="9.718"
                      y1="8.398"
                      y2="33.949"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              pipelineSteps.build.create.aboutYourStage
            </p>
            <div
              class="StyledProps--font StyledProps--main main"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="ciEditStage_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="description-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main"
                  style="font-size: 13px; font-weight: normal;"
                >
                  optionalField
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                    data-name="edit"
                    data-testid="tags-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <label
              class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main StyledProps--margin-bottom-small"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              cloneCodebaseLabel
            </label>
            <div
              class="cloneCodebaseInfo"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                data-icon="info"
              >
                <svg
                  height="10"
                  viewBox="0 0 12 12"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall"
              >
                pipelineSteps.build.create.cloneCodebaseHelperText
              </p>
            </div>
            <div
              class="configureCodebase"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall"
                  icon="cog"
                >
                  <svg
                    data-icon="cog"
                    height="18"
                    viewBox="0 0 16 16"
                    width="18"
                  >
                    <desc>
                      cog
                    </desc>
                    <path
                      d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                pipelineSteps.build.create.configureCodebase
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                pipelineSteps.build.create.configureCodebaseHelperText
              </p>
              <div
                class="bp3-form-group connector"
                data-id="null-1"
              >
                <label
                  class="bp3-label"
                >
                  connector
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                    data-testid="cr-field-connectorRef"
                    style="width: 382px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              test1
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                account
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group repositoryUrl"
                data-id="repoName-2"
                style="flex-grow: 1;"
              >
                <label
                  class="bp3-label"
                  for="repoName"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ciEditStage_repoName"
                  >
                    Repository Name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="repoName"
                      placeholder="pipeline.manifestType.repoNamePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                pipelineSteps.build.create.setupStage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
